major changes : updated images, contents

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     </section>
 
     <section id="about-head" class="section-p1">
-        <img src="images/about/a6.jpg" alt="">
+        <img src="images/about/dms about.png" alt="AboutImage">
         <div>
             <h2>Who We Are?</h2>
             <p>Dynamic Medical System Pvt. Ltd. has been dedicated to serving the healthcare sector in Nepal since its
@@ -57,9 +57,9 @@
                 look forward to serving Nepal's as well as global healthcare needs for many years to come.
             </abbr>
             <br><br>
-            <marquee bgcolor="#ccc" loop="-1" scrollamount="5" width="100%">
-                In-Vitro Diagnostics | Disinfection & Sterilization | Medical & Critical Care | Dermatology & Aesthetic
-                Care |
+            <marquee style="color: azure; border-radius: 4px;" bgcolor="green" loop="-1" scrollamount="5" width="100%">
+                In-Vitro Diagnostics &nbsp;&nbsp;|&nbsp;&nbsp; Disinfection & Sterilization &nbsp;&nbsp;|&nbsp;&nbsp; Medical & Critical Care &nbsp;&nbsp;|&nbsp;&nbsp; Dermatology & Aesthetic
+                Care &nbsp;&nbsp;|&nbsp;&nbsp;
             </marquee>
         </div>
     </section>
