--- a/blog.html
+++ b/blog.html
@@ -45,69 +45,17 @@
     <section id="blog">
         <div class="blog-box">
             <div class="blog-img">
-                <img src="images/blog/b1.jpg" alt="">
+                <img style="border-radius: 7px;" src="images/blog/service dms.png" alt="">
             </div>
             <div class="blog-details">
-                <h4>The Cotton-Jersey Zip-Up Hoodie</h4>
-                <p>Kickstarter man braid godard coloring book. Raclette waistcoat selfies
-                    yr wolf chartreuse hexagon irony, godard...
+                <h4>Dedicated Service Center</h4>
+                <p>One-Stop-Call-Center for all your medical equipment service. 
                 </p>
                 <a href="#">CONTINUE READING</a>
             </div>
-            <h1>13/01</h1>
+            <h1>09/09/2024</h1>
         </div>
-        <div class="blog-box">
-            <div class="blog-img">
-                <img src="images/blog/b2.jpg" alt="">
-            </div>
-            <div class="blog-details">
-                <h4>How to Style a Quiff</h4>
-                <p>Kickstarter man braid godard coloring book. Raclette waistcoat selfies
-                    yr wolf chartreuse hexagon irony, godard...
-                </p>
-                <a href="#">CONTINUE READING</a>
-            </div>
-            <h1>13/04</h1>
-        </div>
-        <div class="blog-box">
-            <div class="blog-img">
-                <img src="images/blog/b3.jpg" alt="">
-            </div>
-            <div class="blog-details">
-                <h4>Must-Have Skater Girl Items</h4>
-                <p>Kickstarter man braid godard coloring book. Raclette waistcoat selfies
-                    yr wolf chartreuse hexagon irony, godard...
-                </p>
-                <a href="#">CONTINUE READING</a>
-            </div>
-            <h1>12/01</h1>
-        </div>
-        <div class="blog-box">
-            <div class="blog-img">
-                <img src="images/blog/b4.jpg" alt="">
-            </div>
-            <div class="blog-details">
-                <h4>Runway-Inspired Trends</h4>
-                <p>Kickstarter man braid godard coloring book. Raclette waistcoat selfies
-                    yr wolf chartreuse hexagon irony, godard...
-                </p>
-                <a href="#">CONTINUE READING</a>
-            </div>
-            <h1>16/01</h1>
-        </div>
-        <div class="blog-box">
-            <div class="blog-img">
-                <img src="images/blog/b6.jpg" alt="">
-            </div>
-            <div class="blog-details">
-                <h4>AW20 Menswear Trends</h4>
-                <p>Kickstarter man braid godard coloring book. Raclette waistcoat selfies
-                    yr wolf chartreuse hexagon irony, godard...
-                </p>
-                <a href="#">CONTINUE READING</a>
-            </div>
-            <h1>10/03</h1>
-        </div>
+        
     </section>
 
     <section id="pagination" class="section-p1">
@@ -119,7 +67,7 @@
     <section id="newsletter" class="section-p1 section-m1">
         <div class="newstext">
             <h4>Sign Up For Newsletter</h4>
-            <p>Get E-mail updates about our latest shop and <span>special offers.</span></p>
+            <p>Get E-mail updates about our latest News and <span> Events.</span></p>
         </div>
         <div class="form">
             <input type="text" placeholder="Your email address">
