--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop - Dynamic Medical System Pvt. Ltd.</title>
+    <title>Product - Dynamic Medical System Pvt. Ltd.</title>
     <link rel="icon" href="images/DMS Favicon.png" type="image/x-icon">
 
     <!-- font-awesome cdn link -->
@@ -38,8 +38,8 @@
     </section>
 
     <section id="page-header">
-        <h2>#stayhome</h2>
-        <p>Save more with coupons & up to 70% off!</p>
+        <h2>Products</h2>
+        <p>Products that we offer</p>
     </section>
 
     <section id="product1" class="section-p1">
@@ -47,256 +47,224 @@
             <div class="pro" onclick="window.location.href='singleProduct.html';">
                 <img src="images/products/f.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+                    <span>isens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
                 <img src="images/products/f.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+                    <span>isens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
                 <img src="images/products/f.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+                    <span>isens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
                 <img src="images/products/f.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+                    <span>isens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
                 <img src="images/products/f.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+                    <span>isens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
                 <img src="images/products/f.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+                    <span>isens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
                 <img src="images/products/f.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+                    <span>isens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
                 <img src="images/products/f.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+                    <span>isens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
-                <img src="images/products/n.jpg" alt="">
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+                    <span>isens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
-                <img src="images/products/n.jpg" alt="">
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+                    <span>isens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
-                <img src="images/products/n.jpg" alt="">
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+                    <span>isens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
-                <img src="images/products/n.jpg" alt="">
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+                    <span>isens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
-                <img src="images/products/n.jpg" alt="">
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+                    <span>isens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
-                <img src="images/products/n.jpg" alt="">
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+                    <span>isens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
-                <img src="images/products/n.jpg" alt="">
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+                    <span>isens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
-            <div class="pro">
-                <img src="images/products/n.jpg" alt="">
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
                 <div class="des">
-                    <span>adidas</span>
-                    <h5>Cartoon Astronaut T-Shirts</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>$78</h4>
+                    <span>isens</span>
+                    <h5></h5>
+                </div>
+                <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
+                <div class="des">
+                    <span>isens</span>
+                    <h5></h5>
+                </div>
+                <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
+                <div class="des">
+                    <span>isens</span>
+                    <h5></h5>
+                </div>
+                <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
+                <div class="des">
+                    <span>isens</span>
+                    <h5></h5>
+                </div>
+                <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
+                <div class="des">
+                    <span>isens</span>
+                    <h5></h5>
+                </div>
+                <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
+                <div class="des">
+                    <span>isens</span>
+                    <h5></h5>
+                </div>
+                <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
+                <div class="des">
+                    <span>isens</span>
+                    <h5></h5>
+                </div>
+                <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
+                <div class="des">
+                    <span>isens</span>
+                    <h5></h5>
+                </div>
+                <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
+                <div class="des">
+                    <span>isens</span>
+                    <h5></h5>
+                </div>
+                <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
+                <div class="des">
+                    <span>isens</span>
+                    <h5></h5>
+                </div>
+                <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
+                <div class="des">
+                    <span>isens</span>
+                    <h5></h5>
+                </div>
+                <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
+                <div class="des">
+                    <span>isens</span>
+                    <h5></h5>
+                </div>
+                <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
+            </div>
+            <div class="pro" onclick="window.location.href='singleProduct.html';">
+                <img src="images/products/f.jpg" alt="">
+                <div class="des">
+                    <span>isens</span>
+                    <h5></h5>
                 </div>
                 <a href="#"><i class="fas fa-shopping-cart cart"></i></a>
             </div>
