--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product - Dynamic Medical System Pvt. Ltd.</title>
+    <title>Products - Dynamic Medical System Pvt. Ltd.</title>
     <link rel="icon" href="images/DMS Favicon.png" type="image/x-icon">
 
     <!-- font-awesome cdn link -->
